Added more descriptive informations and links to 1st recipe

--- a/index.html
+++ b/index.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8" content=""> 
   </head>
   <body>
-    <h1>Southeast Asian Recipes</h1>
+    <h1>Odin Recipes</h1>
+    <p>
+      This is my first assignment on the Odin Project. It will feature recipes from the 
+      website <a href="https://www.allrecipes.com/">AllRecipes</a>.
+    </p>
+    <p>
+      The following some of the recipes featured on that website:
+      <ul>
+        <li>
+          <a href="recipes/baked_beans_from_scratch.html">Baked Beans from Scratch</a>
+        </li>
+      </ul>
+    </p>
   </body>
 </html>
 
