Added code folding and some errors in formatting

--- a/recipes/baked_beans_from_scratch.html
+++ b/recipes/baked_beans_from_scratch.html
@@ -1,3 +1,7 @@
+<!--{~{ ~1 <Modeline> 
+      vi: foldmarker={~{,}~} foldmethod=marker foldlevel=0 textwidth=0
+    }~} ~1 
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -9,6 +13,9 @@
     These baked beans from scratch are made by combining navy beans, molasses, and maple syrup to make this classic dish at home.
   </p>
   <img src="../images/baked_beans_from_scratch_01.webp" />
+<!--  
+{~{ ~ 1 Ingredients
+-->
   <h3>Ingredients</h3>
   <ul>
     <li>
@@ -45,8 +52,13 @@
       1 small onion, chopped
     </li>
   </ul>
-
-  <<h3>Directions</h3>
+<!--
+}~} ~ 1
+-->
+<!--
+{~{ ~ 1 Directions
+-->
+  <h3>Directions</h3>
   <ol>
     <li>
       Step 1 
@@ -83,17 +95,26 @@
       Cover and bake in the preheated oven for 10 minutes; reduce heat to 200 degrees F (95 degrees C) and cook 6 hours longer, stirring beans after they have cooked for 3 hours. Once beans are tender and sauce has reduced and is sticky, remove from the oven, stir, recover, and allow to stand 15 minutes before serving.
       </p>
       <img src="../images/baked_beans_from_scratch_06.webp" />
+<!--
+}~} ~ 1
+-->
   <h3>Quick-Soak Option</h3>
     <p>
     Place navy beans into a large pot and cover with several inches of cold water; bring to a boil over high heat. Once boiling, turn off the heat, cover, and let stand 1 hour. Drain and rinse before using.
     </p>  
   </ol>
+<!--
+{~{ ~ 1 Navigation
+-->
   <h4>Navigation</h4>
   <ul>
     <li>
       <a href="../index.html">Back to the main page</a>
     </li>  
   </ul>
+<!--
+}~} ~ 1
+-->
 </html>
 
 
