Added a new link for potato_salad.html

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <li>
           <a href="recipes/baked_beans_from_scratch.html">Baked Beans from Scratch</a>
         </li>
+        <li>
+          <a href="recipes/potato_salad.html">Best Potato Salad</a>
+        </li>
       </ul>
     </p>
   </body>
