--- a/recipes/baked_beans_from_scratch.html
+++ b/recipes/baked_beans_from_scratch.html
@@ -111,6 +111,9 @@
     <li>
       <a href="../index.html">Back to the main page</a>
     </li>  
+    <li>
+      <a href="potato_salad.html">Best Potato Salad</a>
+    </li>  
   </ul>
 <!--
 }~} ~ 1
