Added images and update image links for potato_salad.html

--- a/recipes/potato_salad.html
+++ b/recipes/potato_salad.html
@@ -12,7 +12,7 @@
   <p>
   This best-ever potato salad is the creamiest, richest potato salad you will ever try. The secret is in the homemade dressing. I get nothing but raves every time I make this.
   </p>
-  <img src="../images/baked_beans_from_scratch_01.webp" />
+  <img src="../images/potato_salad_01.webp" />
 <!--  
 {~{ ~ 1 Ingredients
 -->
@@ -75,41 +75,41 @@
       <p>
       Place potatoes in a large pot and cover with salted water; bring to a boil. Reduce heat to medium-low and simmer until tender, about 20 minutes. Drain and set aside to cool.  
       </p>
-      <img src="../images/baked_beans_from_scratch_02.webp" />
+      <img src="../images/potato_salad_02.webp" />
     <li>
       Step 2 
     </li>
       <p>
       While the potatoes are cooking, whisk together sugar, 2 beaten eggs, and cornstarch in a saucepan; season with salt.
       </p>
-      <img src="../images/baked_beans_from_scratch_03.webp" />
+      <img src="../images/potato_salad_03.webp" />
     <li>
       Step 3 
     </li>
       <p>
       Preheat the oven to 375 degrees F (190 degrees C). Stir ketchup, maple syrup, brown sugar, molasses, Worcestershire sauce, salt, pepper, and chili powder together in a small bowl; set aside.
       </p>
-      <img src="../images/baked_beans_from_scratch_04.webp" />
+      <img src="../images/potato_salad_04.webp" />
     <li>
       Step 4 
     </li>
       <p>
       Peel and dice potatoes. Transfer to a large bowl; toss with hard-cooked eggs, onion, celery, and 1 teaspoon salt.
       </p>
-      <img src="../images/baked_beans_from_scratch_05.webp" />
+      <img src="../images/potato_salad_05.webp" />
     <li>
       Step 5 
     </li>
       <p>
       Stir dressing gently into the bowl of potato salad until evenly coated.
       </p>
-      <img src="../images/baked_beans_from_scratch_06.webp" />
+      <img src="../images/potato_salad_06.webp" />
       Step 6 
     </li>
       <p>
       Chill before serving, 3 hours to overnight.
       </p>
-      <img src="../images/baked_beans_from_scratch_06.webp" />
+      <img src="../images/potato_salad_07.webp" />
 <!--
 }~} ~ 1
 -->
