Added a new link for egg_salad.html

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <li>
           <a href="recipes/potato_salad.html">Best Potato Salad</a>
         </li>
+        <li>
+          <a href="recipes/egg_salad.html">Egg Salad</a>
+        </li>
       </ul>
     </p>
   </body>
