Added new link for egg_salad.html

--- a/recipes/baked_beans_from_scratch.html
+++ b/recipes/baked_beans_from_scratch.html
@@ -114,6 +114,9 @@
     <li>
       <a href="potato_salad.html">Best Potato Salad</a>
     </li>  
+    <li>
+      <a href="egg_salad.html">Egg Salad<a>
+    </li>  
   </ul>
 <!--
 }~} ~ 1
