--- a/recipes/potato_salad.html
+++ b/recipes/potato_salad.html
@@ -104,6 +104,7 @@
       Stir dressing gently into the bowl of potato salad until evenly coated.
       </p>
       <img src="../images/potato_salad_06.webp" />
+    <li>
       Step 6 
     </li>
       <p>
@@ -128,6 +129,9 @@
     </li>  
     <li>
       <a href="baked_beans_from_scratch.html">Baked Beans from Scratch</a>
+    </li>
+    <li>
+      <a href="egg_salad.html">Egg Salad</a>
     </li>
   </ul>
 <!--
